python/testData/quickFixes/PyTypeHintsQuickFixTest/oneElementListInTupleAsTypingMemberParameter.py
from typing import Callable

foo1: Callable[[int], <error descr="Parameters to generic types must be types">[in<caret>t]</error>] = None